--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -170,13 +170,16 @@ h3 {
   color: #555;
   font-size: 19px;
   text-align: center;
-  border-top: 1px solid #aaa;
   padding-top: 15px;
   margin-top: 0;
   margin-bottom: 1em;
 }
 
-#intro, #contribute, #team, #thanks {
+h3.overline {
+  border-top: 1px solid #aaa;
+}
+
+#intro, #contribute, #thanks {
   
   padding: 2em 3em;
 
@@ -195,9 +198,9 @@ h3 {
   }
 }
 
-#team { background: #ffd; }
-
-#intro, #thanks { background: #eee; }
+/* Container colors */
+#thanks { background: #ffd; }
+#intro, #footer { background: #eee; }
 
 .buttons {
   margin-top: 2em;
@@ -221,7 +224,7 @@ h3 {
 @captheight: 156;
 @captmargin: @captwidth - @thumbsize;
 @thumbmargin: @captmargin + @thumbsize/2.4;
-#team {
+#thanks .team {
   ul { text-align: left; list-style: none; }
   .thumbnails {
 
@@ -305,15 +308,16 @@ h3 {
   }
 }
 
-#thanks {
+#thanks .orgs {
   li { width: 25%; float: left; }
   p { 
     display: block; clear: both; 
+    font-size: 15px;
     padding-top:1em; text-align: center; 
   }
 }
 
-#contact {
+#footer {
   padding-top: 2em;
 
   .icon {
