All links blank, team content, thumbnail height fixed

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -26,7 +26,7 @@ block body
                     li
                         a(href='#contribute') Contribute
                     li
-                        a(href='#team') Meet the team
+                        a(href='#thanks') Meet the team
                     li
                         a(href='#contact') Contact and follow
 
@@ -93,7 +93,7 @@ block body
                     a(href="mailto:oabutton+bug@gmail.com")
                         button.btn.btn-default.bug(type="button")
                             | Report a bug
-                    a(target="_blank", href="https://www.charitycheckout.co.uk/1111824/OpenAccessButton")
+                    a(href="https://www.charitycheckout.co.uk/1111824/OpenAccessButton")
                         button.btn.btn-warning.donate(type="button") 
                             | Donate!
                     a(href="mailto:oabutton+suggestion@gmail.com")
