--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -279,7 +279,7 @@ h3.overline {
         float: left; margin-right: 5px;
 
         overflow: hidden;
-        img { width: 100%; }
+        img { height: 144px; }
       }
 
       .links {
