--- a/oabutton/static/public/css/styles.css
+++ b/oabutton/static/public/css/styles.css
@@ -287,7 +287,7 @@ h3.overline {
   overflow: hidden;
 }
 #thanks .team .thumbnails .caption .large img {
-  width: 100%;
+  height: 144px;
 }
 #thanks .team .thumbnails .caption .links {
   position: absolute;
@@ -326,7 +326,7 @@ h3.overline {
 #thanks .orgs p {
   display: block;
   clear: both;
-  font-size: 14px;
+  font-size: 15px;
   padding-top: 1em;
   text-align: center;
 }
