--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -100,6 +100,14 @@ header {
   border-radius: 10px;
 }
 
+#help-bookmarklet {
+  display: none;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  background: #eef;
+  padding: 1em 1em 0.5em 1em;
+}
+
 .wedge-up {
   display: block;
   width: 15px;
