Start text updated

--- a/oabutton/apps/web/templates/web/start.jade
+++ b/oabutton/apps/web/templates/web/start.jade
@@ -5,7 +5,13 @@ block start
         {% csrf_token %}
         .row
             .col-md-8.col-md-offset-2
-                p Sign up below to get the Open Access Button, an easy, safe bookmarklet so you can show the global impact of research paywalls - and to help get access to the research you need. Simply drag the Open Access Button to your bookmark bar, click it each time you hit a paywall on academic research, and it will put your experience on the map along with thousands of others.  Then use our tools to search for access to the article, and use social media to spread the word.  Every person who uses the Open Access Button brings us closer to changing the system. 
+                p Sign up below to get the 
+                    i Open Access Button
+                    |, a safe, easy to use browser bookmarklet that you can use to show the global effects of research paywalls - and to help get access to the research you need. Simply hold and drag the 
+                    i Open Access Button 
+                    | up to your bookmark bar, and click it each time you hit a paywall on academic research. Fill out a short form, add your experience to the map along with thousands of others. Then use our tools to search for access to this article, and spread the word with social media. Every person who uses the
+                    i Open Access Button 
+                    | brings us closer to changing the system. 
                 p 
                     a(data-toggle="modal", data-target="#video-modal", alt="Need access to research?", title="Learn more about the project in this video")
                         | Watch the video
