Start text updated

--- a/oabutton/apps/web/templates/web/start.jade
+++ b/oabutton/apps/web/templates/web/start.jade
@@ -7,9 +7,7 @@ block start
             .col-md-8.col-md-offset-2
                 p Sign up below to get the 
                     i Open Access Button
-                    |, a safe, easy to use browser bookmarklet that you can use to show the global effects of research paywalls - and to help get access to the research you need. Simply hold and drag the 
-                    i Open Access Button 
-                    | up to your bookmark bar, and click it each time you hit a paywall on academic research. Fill out a short form, add your experience to the map along with thousands of others. Then use our tools to search for access to this article, and spread the word with social media. Every person who uses the
+                    |, a safe, easy to use browser bookmarklet that you can use to show the global effects of research paywalls - and to help get access to the research you need. Every time you hit a paywall blocking your research, click the button. Fill out a short form, add your experience to the map along with thousands of others. Then use our tools to search for access to papers, and spread the word with social media. Every person who uses the
                     i Open Access Button 
                     | brings us closer to changing the system. 
                 p 
