Tweek footer layout for 750-970px display width

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -139,7 +139,7 @@ block body
         a(name='contact')
         .container
             .row
-                .col-md-3
+                .col-md-3.col-sm-3
                     p
                         b INFO
                     p
@@ -149,7 +149,7 @@ block body
                         a(href="https://groups.google.com/d/forum/open-access-button-general")
                             | Join the community
                     p Disclaimer
-                .col-md-3
+                .col-md-3.col-sm-3
                     p
                         b ABOUT
                     p
@@ -161,7 +161,7 @@ block body
                     p
                         a(href="mailto:oabutton+data@gmail.com")
                             | Get the data
-                .col-md-6
+                .col-md-6.col-sm-6
                     p
                         a.icon.twitter(href="https://twitter.com/oa_button") Twitter
                         a.icon.facebook(href="https://www.facebook.com/openaccess.net") Facebook
