Bookmarklet: open openaccessbutton link in new tab

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -33,7 +33,7 @@
     {% block footer %}
     <div class="container bookmarklet-footer">
         <hr />
-        <p>For instructions, more info and your contribution head to <a href="http://www.openaccessbutton.org">www.openaccessbutton.org</a></p>
+        <p>For instructions, more info and your contribution head to <a href="http://www.openaccessbutton.org" target="_blank">www.openaccessbutton.org</a></p>
         <hr />
         <div class="row">
             <div>
