--- a/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/apps/web/templates/web/layout.jade
@@ -1,11 +1,13 @@
 doctype 5
-html(lang='en')
+html(lang='en', itemscope, itemtype='http://schema.org/Organization')
 
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    meta(name='description', content='Open Access Button')
+    meta(itemprop='name', content='Open Access Button')
+    meta(itemprop='description', content='Paywalls deny people access to life-saving research every day. The Open Access Button will make the damage of paywalls visible to the world and get you access to the research you need.')
+    meta(itemprop='image', content='/static/img/oabutton_logo.png')
     if title
       title Open Access Button - #{title}
     else
