Add schema.org markup to bookmarklet page

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/Organization">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="Open Access Button">
+    <meta itemprop="name" content="Open Access Button">
+    <meta itemprop="description" content="Paywalls deny people access to life-saving research every day. The Open Access Button will make the damage of paywalls visible to the world and get you access to the research you need.">
+    <meta itemprop="image" content="/static/img/oabutton_logo.png">
     <title>Open Access Button</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
