Add a Google +1 button to bookmarklet page 2

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page2.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page2.html
@@ -23,6 +23,10 @@
     </p>
 
     <p>
+    <div class="g-plusone" data-size="tall" data-annotation="inline" data-width="300" data-href="http://openaccessbutton.org"></div>
+    </p>
+
+    <p>
     We're also on <a href="https://www.facebook.com/openaccessbutton">Facebook</a> and <a href="https://twitter.com/OA_Button">Twitter</a>! Join us!
     </p>
 </div>
@@ -52,4 +56,11 @@
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=570391483000074";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
 {% endblock %}
