--- a/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/apps/web/templates/web/layout.jade
@@ -48,3 +48,10 @@ html(lang='en', itemscope, itemtype='http://schema.org/Organization')
 
   // Application scripts
   script(src='/static/js/index.js')
+  script
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-43774380-1', 'openaccessbutton.org');
+    ga('send', 'pageview');
