Clarify that people's e-mail address are not given out

--- a/oabutton/apps/web/templates/web/start.jade
+++ b/oabutton/apps/web/templates/web/start.jade
@@ -26,6 +26,7 @@ block start
                 p
                     {{ signin_form.mailinglist}}
                     {{ signin_form.mailinglist|label_with_classes:"mailinglist-label"}}
+                p Your e-mail address will not be publicised and not be shared with third parties!
                 p
                     div.form-group
                         {{ signin_form.privacy}}
