moved leaflet into our css/js directories for SSL removed http links to stylesheets and use SSL instead

--- a/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/apps/web/templates/web/layout.jade
@@ -24,21 +24,21 @@ html(lang='en', itemscope, itemtype='http://schema.org/Organization')
       script(src='/static/js/lib/html5shiv.js')
       script(src='/static/js/lib/respond.min.js')
     
-    link(rel='stylesheet', href='http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css') 
+    link(rel='stylesheet', href='/static/css/leaflet.css') 
     //if lte IE 8
-      link(rel='stylesheet', href='http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css')
+      link(rel='stylesheet', href='/static/css/leaflet.ie.css')
 
   body(data-spy='scroll', data-target='.navbar')
     block body
 
   script(src='/static/js/lib/jquery.min.js')
-  script(src='http://codeorigin.jquery.com/color/jquery.color-2.1.2.min.js')
+  script(src='/static/js/lib/jquery.color-2.1.2.min.js')
   script(src='/static/js/lib/jquery.form.js') 
 
   script(src='/static/js/lib/bootstrap.js')
   script(src='/static/js/lib/bootstrap-dialog.js')
 
-  script(src='http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js')
+  script(src='/static/js/lib/leaflet.js')
   script(src='/static/js/lib/leaflet.markercluster.js')
 
   // Server vars
