--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/css/social-buttons.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway"></link>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway"></link>
     <link rel="stylesheet" href="/static/css/app.css">
   </head>
   <body style="margin-top: 20px" {% block body_attrs %}{% endblock %}>
