--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page3.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page3.html
@@ -14,6 +14,11 @@
     </div>
 
     <hr />
+
+    {% comment %}
+
+    // Disabling this for now as we don't have a robust email scraping
+    // service
     <div id="email-request" class="row-block">
         <h4>Email a request for the paper directly to the author</h4>
         <div class="row">
@@ -23,6 +28,9 @@
         </div>
     </div>
     <hr />
+
+    {% endcomment %}
+
     <div>
         <h4>Searching for related documents</h4>
     </div>
