--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -100,6 +100,10 @@ header {
   border-radius: 10px;
 }
 
+#form-bookmarklet {
+  .checkbox label { font-weight: 600; }
+}
+
 #help-bookmarklet {
   display: none;
   margin-top: 10px;
