Updated about content

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -76,8 +76,14 @@ block body
             .row.hilite-left
                 .col-md-12
                     p
-                        | People are denied access to research hidden behind paywalls every day. This problem is invisible, but it slows innovation, kills curiosity and harms patients. This is an indictment of the current system. Open Access has given us the solution to this problem by allowing everyone to read and re-use research. 
-                        | We created the Open Access Button to track the impact of paywalls and help you get access to the research you need. By using the Open Access Button you’ll help show the impact of this problem, drive awareness of the issue, and help change the system. As if this wasn’t enough, the Open Access Button has several ways of helping you get access to the research you need right now. 
+                        | People are denied access to research hidden behind paywalls every day. This problem is invisible, but it slows innovation, kills curiosity and harms patients. This is an indictment of the current system.
+                        a(href="http://www.youtube.com/watch?v=L5rVH1KGBCY") Open Access 
+                        | has given us the solution to this problem by allowing everyone to read and re-use research. 
+                        | We created the 
+                        i Open Access Button 
+                        | to track the impact of paywalls and help you get access to the research you need. By using the button you’ll help show the impact of this problem, drive awareness of the issue, and help change the system. Furthermore, the 
+                        i Open Access Button 
+                        | has several ways of helping you get access to the research you need right now. 
 
     #contribute
         a(name='contribute')
@@ -164,7 +170,7 @@ block body
                 .col-md-6.col-sm-6
                     p
                         a.icon.twitter(href="https://twitter.com/oa_button") Twitter
-                        a.icon.facebook(href="https://www.facebook.com/openaccess.net") Facebook
+                        a.icon.facebook(href="https://www.facebook.com/openaccessbutton") Facebook
                         a.icon.wordpress(href="http://oabutton.wordpress.com/") Wordpress
 
                     p.license
