--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -154,7 +154,9 @@ block body
                     p
                         a(href="https://groups.google.com/d/forum/open-access-button-general")
                             | Join the community
-                    p Disclaimer
+                    p 
+                        a(href="http://oabutton.wordpress.com/2013/11/17/disclaimer/")
+                            | Terms of use
                 .col-md-3.col-sm-3
                     p
                         b ABOUT
