--- a/oabutton/apps/web/templates/web/start.jade
+++ b/oabutton/apps/web/templates/web/start.jade
@@ -60,4 +60,7 @@ block start
                     |,
                     a(href="http://windows.microsoft.com/en-us/windows-vista/show-or-hide-the-favorites-bar-in-internet-explorer-8") Internet Explorer
                     |. For a 2-minute walkthrough on using the button (don't worry, it's easy!) - 
-                    a(href="#start", data-dismiss="modal", data-toggle="modal", data-target="#video-modal") watch this video.
+                    a(href="#start", data-dismiss="modal", data-toggle="modal", data-target="#video-modal") watch this video
+                    | or 
+                    a(href="http://oabutton.wordpress.com/2013/11/17/244/") read here
+                    |.
