Background image (Site2 004)

--- a/oabutton/static/public/css/styles.css
+++ b/oabutton/static/public/css/styles.css
@@ -42,7 +42,8 @@ a[name] {
   background: url(../img/oalogo_x_white.png) no-repeat top left;
 }
 header {
-  background: url(http://farm7.staticflickr.com/6039/6303965123_ee370be50a_b.jpg) no-repeat;
+  background: url(../img/bg.jpg) no-repeat;
+  background-position: 0px 50%;
   background-size: 100% auto;
   text-align: center;
 }
