--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -36,7 +36,8 @@ a[name] {
 }
 
 header {
-  background:url(http://farm7.staticflickr.com/6039/6303965123_ee370be50a_b.jpg) no-repeat;
+  background:url(../img/bg.jpg) no-repeat;
+  background-position: 0px 50%;
   background-size:100% auto;
   text-align: center;
 
