--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -224,6 +224,8 @@ h3.overline {
   button {
     font-size: 20px;
     padding: 4px 10px;
+    border-color: #444;
+    color: #000;
     margin: 0 20px;
   }
 }
