--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -48,7 +48,7 @@ block body
                     h4.modal-title(id="video-header") 
                         | Introduction video
                 .modal-body
-                    iframe(width="538", height="303", src="//www.youtube.com/embed/Z93Yq0_DP7I", frameborder="0", allowfullscreen)
+                    iframe(width="538", height="303", src="//www.youtube-nocookie.com/embed/3X_59G06RZM?rel=0", frameborder="0", allowfullscreen)
                 .modal-footer
                     button.btn.btn-default(type="button", data-dismiss="modal") Close
 
