--- a/oabutton/apps/web/templates/web/start.jade
+++ b/oabutton/apps/web/templates/web/start.jade
@@ -11,7 +11,7 @@ block start
                     i Open Access Button 
                     | brings us closer to changing the system. 
                 p 
-                    a(data-toggle="modal", data-target="#video-modal", alt="Need access to research?", title="Learn more about the project in this video")
+                    a(data-toggle="modal", data-target="#video-modal", alt="Need access to research?", title="Learn more about the project in this video", href="#")
                         | Watch the video
                     | for a quick introduction, then sign up here:
                 p
