--- a/oabutton/static/public/less/app.less
+++ b/oabutton/static/public/less/app.less
@@ -192,6 +192,10 @@ h3.overline {
   border-top: 1px solid #aaa;
 }
 
+a[data-toggle] {
+  cursor: pointer;
+}
+
 #intro, #contribute, #thanks {
   
   padding: 2em 3em;
