--- a/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/apps/web/templates/web/layout.jade
@@ -15,18 +15,19 @@ html(lang='en', itemscope, itemtype='http://schema.org/Organization')
     link(rel='shortcut icon', type='image/x-icon', href='/static/img/favicon.ico')
 
     link(rel='stylesheet', href='/static/css/bootstrap.min.css')
-    //- link(rel='stylesheet', href='/css/font-awesome.min.css')
-    script(src='//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js')
-
-    link(rel='stylesheet', type='text/css', media='all', href='/static/css/styles.css')
-        
-    //if lt IE 9
-      script(src='/static/js/lib/html5shiv.js')
-      script(src='/static/js/lib/respond.min.js')
-    
     link(rel='stylesheet', href='/static/css/leaflet.css') 
     //if lte IE 8
       link(rel='stylesheet', href='/static/css/leaflet.ie.css')
+    link(rel='stylesheet', type='text/css', media='all', href='/static/css/styles.css')
+
+    script(src='//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js')
+    script
+      WebFont.load({ google: { families: ['Raleway'] }});
+      var events = {{ events|safe }};
+        
+    //if lt IE 9
+      script(src='/static/js/lib/html5shiv.js')
+      script(src='/static/js/lib/respond.min.js')    
 
   body(data-spy='scroll', data-target='.navbar')
     block body
@@ -39,15 +40,12 @@ html(lang='en', itemscope, itemtype='http://schema.org/Organization')
   script(src='/static/js/lib/bootstrap-dialog.js')
 
   script(src='/static/js/lib/leaflet.js')
-  script(src='/static/js/lib/leaflet.markercluster.js')
-
-  // Server vars
-  script
-    var events = {{ events|safe }};
-    WebFont.load({ google: { families: ['Raleway'] }});
+  script(src='/static/js/lib/leaflet.markercluster.js')    
 
   // Application scripts
   script(src='/static/js/index.js')
+
+  // Analytics
   script
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
