--- a/oabutton/apps/web/templates/web/start.jade
+++ b/oabutton/apps/web/templates/web/start.jade
@@ -13,7 +13,9 @@ block start
                 p 
                     a(data-toggle="modal", data-target="#video-modal", alt="Need access to research?", title="Learn more about the project in this video")
                         | Watch the video
-                    | for a quick introduction, then sign up here:
+                    |  or 
+                    a(href="http://oabutton.wordpress.com/2013/11/17/244/") read this
+                    |  for a quick introduction, then sign up here:
                 p
                     {{ signin_form.email }}
                 p
@@ -61,6 +63,6 @@ block start
                     a(href="http://windows.microsoft.com/en-us/windows-vista/show-or-hide-the-favorites-bar-in-internet-explorer-8") Internet Explorer
                     |. For a 2-minute walkthrough on using the button (don't worry, it's easy!) - 
                     a(href="#start", data-dismiss="modal", data-toggle="modal", data-target="#video-modal") watch this video
-                    | or 
+                    |  or 
                     a(href="http://oabutton.wordpress.com/2013/11/17/244/") read here
                     |.
