Use bootstrap min

--- a/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/apps/web/templates/web/layout.jade
@@ -36,7 +36,7 @@ html(lang='en', itemscope, itemtype='http://schema.org/Organization')
   script(src='/static/js/lib/jquery.color-2.1.2.min.js')
   script(src='/static/js/lib/jquery.form.js') 
 
-  script(src='/static/js/lib/bootstrap.js')
+  script(src='/static/js/lib/bootstrap.min.js')
   script(src='/static/js/lib/bootstrap-dialog.js')
 
   script(src='/static/js/lib/leaflet.js')
