Improved button activation

--- a/oabutton/apps/web/templates/web/start.jade
+++ b/oabutton/apps/web/templates/web/start.jade
@@ -17,9 +17,9 @@ block start
                     a(href="http://oabutton.wordpress.com/2013/11/17/244/") read this
                     |  for a quick introduction, then sign up here:
                 p
-                    {{ signin_form.email }}
-                p
                     {{ signin_form.name }}
+                p
+                    {{ signin_form.email }}
                 p
                     {{ signin_form.profession }}
                 .checkbox
@@ -49,8 +49,9 @@ block start
         .row
             .col-md-8.col-md-offset-2
                 p 
-                    b Thanks for signing up! 
-                    | Don't forget to check your inbox for a verification email. 
+                    | Thanks for signing up! Your personal 
+                    b Open Access Button
+                    |  is at the top of the page, and you can add it to your bookmark bar now.
                 p If you do not see a bookmark bar at the top of your browser, you can find instructions for activating yours here: 
                     a(href="https://support.google.com/chrome/answer/95745") Chrome
                     |, 
