--- a/oabutton/static/public/css/styles.css
+++ b/oabutton/static/public/css/styles.css
@@ -106,6 +106,68 @@ header .lead span {
   border: 1px solid #ddd;
   border-radius: 10px;
 }
+.slidetop {
+  animation-name: swooshlet;
+  -o-animation-name: swooshlet;
+  -ms-animation-name: swooshlet;
+  -moz-animation-name: swooshlet;
+  -webkit-animation-name: swooshlet;
+  animation-duration: 2s;
+  -o-animation-duration: 2s;
+  -ms-animation-duration: 2s;
+  -moz-animation-duration: 2s;
+  -webkit-animation-duration: 2s;
+}
+@-webkit-keyframes swooshlet {
+  from {
+    opacity: 0;
+    top: 75px;
+  }
+  to {
+    opacity: 1;
+    top: 15px;
+  }
+}
+@-moz-keyframes swooshlet {
+  from {
+    opacity: 0;
+    top: 75px;
+  }
+  to {
+    opacity: 1;
+    top: 15px;
+  }
+}
+@-ms-keyframes swooshlet {
+  from {
+    opacity: 0;
+    top: 75px;
+  }
+  to {
+    opacity: 1;
+    top: 15px;
+  }
+}
+@-o-keyframes swooshlet {
+  from {
+    opacity: 0;
+    top: 75px;
+  }
+  to {
+    opacity: 1;
+    top: 15px;
+  }
+}
+@keyframes swooshlet {
+  from {
+    opacity: 0;
+    top: 75px;
+  }
+  to {
+    opacity: 1;
+    top: 15px;
+  }
+}
 #form-bookmarklet .checkbox label {
   font-weight: 700;
 }
