Use openaccessbutton.org as share link

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page2.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page2.html
@@ -10,7 +10,7 @@
     </p>
 
     <p>
-    <a href='https://twitter.com/share?url=http://oabutton.org&text=I hit a #paywall trying to access {{ url }}! Help me demand open access at&via=OA_Button&related=OA_Button' class="twitter-share-button" data-lang="en" data-size="large">Tweet</a> 
+    <a href='https://twitter.com/share?url=http://openaccessbutton.org&text=I hit a #paywall trying to access {{ url }}! Help me demand open access at&via=OA_Button&related=OA_Button' class="twitter-share-button" data-lang="en" data-size="large">Tweet</a> 
     <p>
     <p>
     <div class="fb-like" data-href="https://www.facebook.com/openaccessbutton" data-width="300" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
@@ -23,7 +23,7 @@
     </p>
 
     <p>
-    <div class="g-plusone" data-size="tall" data-annotation="inline" data-width="300" data-href="http://oabutton.org"></div>
+    <div class="g-plusone" data-size="tall" data-annotation="inline" data-width="300" data-href="http://openaccessbutton.org"></div>
     </p>
 
     <p>
