--- a/oabutton/apps/bookmarklet/templates/bookmarklet/page2.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/page2.html
@@ -49,10 +49,10 @@
 {% endblock %}
 {% block scripts %}
 
-{% coment %} Twitter Widget {% endcoment %}
+{% comment %} Twitter Widget {% endcomment %}
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-{% coment %} Facebook Widget {% endcoment %}
+{% comment %} Facebook Widget {% endcomment %}
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -61,7 +61,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-{% coment %} Google+ Widget {% endcoment %}
+{% comment %} Google+ Widget {% endcomment %}
 <script type="text/javascript">
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
