--- a/oabutton/static/public/css/app.css
+++ b/oabutton/static/public/css/app.css
@@ -14,6 +14,13 @@ IMG#bookmarklet-badge {
     font-family: "Raleway";
 }
 
+.version {
+    font-size: 75%;
+    position: absolute;
+    top: 5px;
+    right: 20px;
+}
+
 .raleway-font {
     font-family: "Raleway";
 }
