Insert version into bug report email subject and footer

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -96,7 +96,7 @@ block body
 
             .row.buttons
                 .col-md-12
-                    a(href="mailto:oabutton+bug@gmail.com")
+                    a(href="mailto:oabutton+bugs@gmail.com?subject=OAButton Bug Report (version {{ VERSION }})")
                         button.btn.btn-default.bug(type="button")
                             | Report a bug
                     a(href="https://www.charitycheckout.co.uk/1111824/OpenAccessButton")
@@ -183,4 +183,4 @@ block body
                         span(xmlns:dct="http://purl.org/dc/terms/", property="dct:title") Open Access Button 
                         | is licensed under a 
                         a(rel="license", href="http://creativecommons.org/licenses/by/3.0/") Creative Commons Attribution 3.0 Unported License
-                        |.
+                        |. Open Access Button version {{ VERSION }}.
